RESOLVED FIXED130710
ASSERTION FAILED in Parser: dst != localReg
https://bugs.webkit.org/show_bug.cgi?id=130710
Summary ASSERTION FAILED in Parser: dst != localReg
Oliver Hunt
Reported 2014-03-24 22:17:57 PDT
ASSERTION FAILED in Parser: dst != localReg
Attachments
Patch (39.54 KB, patch)
2014-03-24 23:10 PDT, Oliver Hunt
no flags
Patch (5.79 KB, patch)
2014-03-24 23:18 PDT, Oliver Hunt
fpizlo: review+
Oliver Hunt
Comment 1 2014-03-24 23:10:59 PDT
Darin Adler
Comment 2 2014-03-24 23:13:15 PDT
Comment on attachment 227723 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=227723&action=review > LayoutTests/js/parser-syntax-check-expected.txt:9 > +CURRENT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )" > +cd $CURRENT_DIR > +cd .. > +cd .. > +cd .. > +cd .runner > +export DYLD_FRAMEWORK_PATH=$(cd ../.vm; pwd) > +export JSC_timeout=169 > +(cd ../.tests/jsc-layout-tests.yaml/js/script-tests && "$@" ../../../../.vm/JavaScriptCore.framework/Resources/jsc --enableConcurrentJIT\=false --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 resources/standalone-pre.js parser-syntax-check.js resources/standalone-post.js) || exit 1 What’s this?
Oliver Hunt
Comment 3 2014-03-24 23:14:02 PDT
(In reply to comment #2) > (From update of attachment 227723 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=227723&action=review > > > LayoutTests/js/parser-syntax-check-expected.txt:9 > > +CURRENT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )" > > +cd $CURRENT_DIR > > +cd .. > > +cd .. > > +cd .. > > +cd .runner > > +export DYLD_FRAMEWORK_PATH=$(cd ../.vm; pwd) > > +export JSC_timeout=169 > > +(cd ../.tests/jsc-layout-tests.yaml/js/script-tests && "$@" ../../../../.vm/JavaScriptCore.framework/Resources/jsc --enableConcurrentJIT\=false --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 resources/standalone-pre.js parser-syntax-check.js resources/standalone-post.js) || exit 1 > > What’s this? Garbage, accidentally copied the wrong thing. One sec.
Filip Pizlo
Comment 4 2014-03-24 23:17:36 PDT
Comment on attachment 227723 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=227723&action=review >>> LayoutTests/js/parser-syntax-check-expected.txt:9 >>> +(cd ../.tests/jsc-layout-tests.yaml/js/script-tests && "$@" ../../../../.vm/JavaScriptCore.framework/Resources/jsc --enableConcurrentJIT\=false --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 resources/standalone-pre.js parser-syntax-check.js resources/standalone-post.js) || exit 1 >> >> What’s this? > > Garbage, accidentally copied the wrong thing. One sec. Have you resolved this?
Oliver Hunt
Comment 5 2014-03-24 23:18:27 PDT
Oliver Hunt
Comment 6 2014-03-25 11:01:12 PDT
Note You need to log in before you can comment on or make changes to this bug.