ASSERTION FAILED in Parser: dst != localReg https://bugs.webkit.org/show_bug.cgi?id=130710

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Just make sure we don't try to write to a captured constant,
following the change to track captured variables separately.

* bytecompiler/NodesCodegen.cpp:
(JSC::PostfixNode::emitResolve):
(JSC::PrefixNode::emitResolve):

LayoutTests:

New testcases.

* js/parser-syntax-check-expected.txt:
* js/script-tests/parser-syntax-check.js:

Canonical link: https://commits.webkit.org/148762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166240 268f45cc-cd09-0410-ab3c-d52691b4dbfc